--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     <div class="container">
         <!-- About me -->
       <section class="page-front">
-        <p>Hi! This is Martin. I am a web developer and I want to work with you!</p>
+        <!-- <p>Hi! This is Martin. I am a web developer and I want to work with you!</p> -->
+        Hi! This is Martin. I am a web developer and I want to work with you!
         <!-- <img src="img/profile-pic.jpg" class="circle profile-pic"> -->
       </section>
 
