--- a/index.html
+++ b/index.html
@@ -34,11 +34,13 @@
     <div class="container">
         <!-- About me -->
       <section class="page-front" id="page-home">
-        
+        <div class="hiddenDiv"></div>
         <!-- <div class="blob"></div> -->
         <!-- <p>Hi! This is Martin. I am a web developer and I want to work with you!</p> -->
         <h1>Hi! This is Martin. I am a web developer and I want to work with you!</h1>
-        <a a href="#page-skills" class="arrow1"></a>
+        <a href="#page-about" class="arrow-wrapper">
+          <span class="arrow"></span>
+        </a>
         
         <!-- <div class="pulse">
           <span>Know more...<span>
