--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           </div>
 
           
-          <div class="project-card" id="card-iptracker">
+          <div class="project-card" id="card-chess">
             <div class="project-card-content">
               <h2 class="project-card-title">Chess</h2>
               <p class="project-card-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, deleniti!</p>
