--- a/index.html
+++ b/index.html
@@ -81,9 +81,10 @@
       
       <!-- Projects -->
       <section  class="page-projects" id="page-projects">
+        <h1>Projects</h1>
         
-
         <div class="projects-container">
+
 
           <!-- PROJECT INFO CARDS -->
           <div class="project-info-card project-info-card-hidden" id='projects-container-room'>
