--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
           <div class="project-card" id="card-room">
             <div class="project-card-content">
               <h2 class="project-card-title">Furniture shop</h2>
-              <p class="project-card-body">Landing page of a furniture store</p>
+              <p class="project-card-body">Landing page for a furniture store</p>
               <a class="project-card-btn" id='more-info-btn-room' href="#">More</a>
             </div>
           </div>
