--- a/index.html
+++ b/index.html
@@ -87,11 +87,10 @@
 
 
           <!-- PROJECT INFO CARDS -->
-          <div class="project-info-card project-info-card-hidden" id='projects-container-room'>
+          <div class="project-info-card" id='projects-container-room'>
               <div class="back-btn" id="back-btn-room"></div>  
               <div class="project-info-card-header">
                 <h1 class="project-info-card-header-h1">Room: Furniture store landing page</h1>
-                <span class="project-info-card-cross"></span>
               </div>
               <div class="project-info-card-body-left">
                 <div class="gallery-container">
