--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
 
           <!-- PROJECT INFO CARDS -->
-          <div class="project-info-card" id='projects-container-room'>
+          <div class="project-info-card project-info-card-hidden" id='projects-container-room'>
               <div class="back-btn" id="back-btn-room"></div>  
               <div class="project-info-card-header">
                 <h1 class="project-info-card-header-h1">Room: Furniture store landing page</h1>
