--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="container">
         <!-- About me -->
       <section class="page-front" id="page-home"> 
-         <h1>Hi! This is Martin. I am a web developer and I want to work with you!</h1>
+         <h1>YO! This is Martin. I am a web developer and I want to work with you!</h1>
         <a href="#page-about" class="arrow-wrapper">
           <span class="arrow"></span>
         </a>
