--- a/index.html
+++ b/index.html
@@ -410,9 +410,12 @@
       <!-- Resume -->
       <section  class="page-resume" id="page-resume">
         <!-- <div class="spacer4"></div> -->
-        <div class="resume-btn-wrapper">
-          <div class="resume-btn">Get my Resume here</div>
+        <div class="page-resume-container">
+          <!-- <div class="resume-btn-wrapper">
+            <div class="resume-btn">Get my Resume here</div>
+          </div>   -->
         </div>
+        
         
       </section>
 
