--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <section class="page-front" id="page-home"> 
          <h1>Hi! This is Martin. I am a web developer and I want to work with you!</h1>
         <a href="#page-about" class="arrow-wrapper">
-          <span class="arrow"></span>
+          <div class="arrow"></div>
         </a>
 
         <div class="divider1">
@@ -409,11 +409,13 @@
 
       <!-- Resume -->
       <section  class="page-resume" id="page-resume">
+        <h1>Resume</h1>
         <!-- <div class="spacer4"></div> -->
         <div class="page-resume-container">
-          <!-- <div class="resume-btn-wrapper">
+
+          <div class="resume-btn-wrapper">
             <div class="resume-btn">Get my Resume here</div>
-          </div>   -->
+          </div>  
         </div>
         
         
