--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
         <div class="page-resume-container">
 
           <div class="resume-btn-wrapper">
-            <div class="resume-btn">Get my Resume here</div>
+            <a href="/Martin Arce Resume.pdf" download><div class="resume-btn">Get my Resume here</div></a>
           </div>  
         </div>
         
