--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                   </div>
                 </div>
                 <div class="project-info-buttons">
-                  <a target="_blank" href="#"><div class="project-info-view-live">Live version</div></a>
+                  <a target="_blank" href="https://replit.com/@MartinMaple/Chess-Replit"><div class="project-info-view-live">Live version</div></a>
                   <a target="_blank" href="https://github.com/divagueame/chess"><div class="project-info-view-code">Source code</div></a>
                 </div>
               </div>
