--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <h1>About</h1>
         <div class="about-card">
           <div class="about-pic"></div>
-          <div class="about-text">Hello! My name is Martin. I am currently living in Dresden while I am currently studying my second year of web and applications design at the CIFP Ponferrada.<br>I want to be a part of a team to build where I can contribute with my diverse experience and passion and to grow together.</div>
+          <div class="about-text">Hello! My name is Martin. I am currently living in Dresden while I am currently studying my second year of web and applications design at the CIFP Ponferrada.<br>I want to be a part of a team where I can contribute with my diverse experience and passion.</div>
         </div>
         
         
